# finance-report-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  demo_function_calling.py  docker-compose.yml  eval_results.md  main.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/: eval_summary.json
configs/: settings.yaml
data/train/: rerank_dev.jsonl  rerank_train.jsonl
docs/: 踩坑与设计记录.md  踩坑记录-StageE.md
scripts/: build_index.py  compare_sft.py  make_rerank_dataset.py  make_sft_dataset.py  robust_download.py  trace_run.py  train_reranker.py
sft/: README.md  qwen2_5_7b_lora_sft.yaml
sft/data/: dataset_info.json  finance_rag_qa.json
src/: config.py  llm.py  utils.py
src/agents/: analyst.py  critic.py  graph.py  planner.py  retriever.py  state.py  writer.py
src/data/: akshare_loader.py  pdf_loader.py
src/eval/: dataset.py  metrics.py  rag_qa.py  run_eval.py  run_ragas.py
src/rag/: embedder.py  index.py  pipeline.py  reranker.py
src/tools/: finance_tools.py
tests/: conftest.py  test_agents.py  test_data.py  test_eval.py  test_graph.py  test_rag.py  test_tools.py
